[gd_scene load_steps=14 format=3 uid="uid://cxp0q766j5g58"]

[ext_resource type="Script" path="res://1_Scripts/pussy_screen.gd" id="1_lpmtn"]
[ext_resource type="Texture2D" uid="uid://dl1ofwcuk012b" path="res://2_Images/UI/15535131861_3c5fb01c15_k.jpg" id="2_noxl4"]
[ext_resource type="FontFile" uid="uid://cyn3tsi0jwlyw" path="res://69_Fonts/go3v2.ttf" id="3_j4bbt"]
[ext_resource type="AudioStream" uid="uid://bfqmu28rdsphd" path="res://3_Audio/SFX/impactBell_heavy_003.ogg" id="4_64vau"]
[ext_resource type="AudioStream" uid="uid://b0fwk8ngxp21p" path="res://3_Audio/SFX/impactGlass_heavy_003.ogg" id="5_l2agc"]
[ext_resource type="FontFile" uid="uid://da5k2m2fg3fk4" path="res://69_Fonts/YOZAKURA-Regular.otf" id="6_vuwes"]
[ext_resource type="AudioStream" uid="uid://bswlf3hwxndud" path="res://3_Audio/162068__mrauralization__railroad-crossing-japan.wav" id="7_qki5w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u4by1"]
texture = ExtResource("2_noxl4")
modulate_color = Color(0.20871, 0.20871, 0.20871, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kt17g"]
bg_color = Color(0.523943, 0, 0.0808784, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_size = 9

[sub_resource type="Animation" id="Animation_4el3a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPS/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPS/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_detqk"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPS/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPS/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_l3nie"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPS/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionPS/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n7dld"]
_data = {
"RESET": SubResource("Animation_4el3a"),
"fade_in": SubResource("Animation_detqk"),
"fade_out": SubResource("Animation_l3nie")
}

[node name="PussyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lpmtn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_u4by1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = 45.0
offset_right = 275.0
offset_bottom = 287.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("6_vuwes")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_kt17g")
text = "be brawe and try again"

[node name="Click" type="AudioStreamPlayer" parent="VBoxContainer/Button"]
stream = ExtResource("4_64vau")

[node name="Hover" type="AudioStreamPlayer" parent="VBoxContainer/Button"]
stream = ExtResource("5_l2agc")

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("6_vuwes")
theme_override_font_sizes/font_size = 55
theme_override_styles/normal = SubResource("StyleBoxFlat_kt17g")
text = "Give up and run away"

[node name="Click2" type="AudioStreamPlayer" parent="VBoxContainer/Button2"]
stream = ExtResource("4_64vau")

[node name="Hover2" type="AudioStreamPlayer" parent="VBoxContainer/Button2"]
stream = ExtResource("5_l2agc")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -295.0
offset_top = -284.0
offset_right = 295.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource("3_j4bbt")
theme_override_font_sizes/font_size = 74
text = "You coward! How dare you?
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_qki5w")
autoplay = true

[node name="TransitionPS" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_n7dld")
}

[node name="ColorRect" type="ColorRect" parent="TransitionPS"]
visible = false
offset_right = 1088.0
offset_bottom = 766.0
color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/Button2" to="." method="_on_exit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_exit_pressed"]
[connection signal="animation_finished" from="TransitionPS" to="." method="_on_transition_animation_finished"]
